--- a/src/main/webapp/WEB-INF/views/books/star.css
+++ b/src/main/webapp/WEB-INF/views/books/star.css
@@ -1,17 +1,28 @@
-@charset "UTF-8";
-.starpoint_box{position:relative;background:url(https://github.com/miruy/Blog_Markdown_Img/blob/master/star.png?raw=true) 0 0 no-repeat;font-size:0;}
-.starpoint_box .starpoint_bg{display:block;position:absolute;top:0;left:0;height:18px;background:url(https://github.com/miruy/Blog_Markdown_Img/blob/master/star.png?raw=true) 0 -20px no-repeat;pointer-events:none;}
-.starpoint_box .label_star{display:inline-block;width:10px;height:18px;box-sizing:border-box;}
-.starpoint_box .star_radio{opacity:0;width:0;height:0;position:absolute;}
-.starpoint_box .star_radio:nth-of-type(1):hover ~ .starpoint_bg,
-.starpoint_box .star_radio:nth-of-type(1):checked ~ .starpoint_bg{width:20%;}
-.starpoint_box .star_radio:nth-of-type(2):hover ~ .starpoint_bg,
-.starpoint_box .star_radio:nth-of-type(2):checked ~ .starpoint_bg{width:40%;}
-.starpoint_box .star_radio:nth-of-type(3):hover ~ .starpoint_bg,
-.starpoint_box .star_radio:nth-of-type(3):checked ~ .starpoint_bg{width:60%;}
-.starpoint_box .star_radio:nth-of-type(4):hover ~ .starpoint_bg,
-.starpoint_box .star_radio:nth-of-type(4):checked ~ .starpoint_bg{width:80%;}
-.starpoint_box .star_radio:nth-of-type(5):hover ~ .starpoint_bg,
-.starpoint_box .star_radio:nth-of-type(5):checked ~ .starpoint_bg{width:100%;}
+.star-rating {
+  border:solid 1px #ccc;
+  display:flex;
+  flex-direction: row-reverse;
+  font-size:1.5em;
+  justify-content:space-around;
+  padding:0 .2em;
+  text-align:center;
+  width:5em;
+}
 
-.blind{position:absolute;clip:rect(0 0 0 0);margin:-1px;width:1px;height: 1px;overflow:hidden;}
+.star-rating input {
+  display:none;
+}
+
+.star-rating label {
+  color:#ccc;
+  cursor:pointer;
+}
+
+.star-rating :checked ~ label {
+  color:#f90;
+}
+
+.star-rating label:hover,
+.star-rating label:hover ~ label {
+  color:#fc0;
+}
