--- a/src/main/webapp/WEB-INF/views/books/star.css
+++ b/src/main/webapp/WEB-INF/views/books/star.css
@@ -1,28 +1,30 @@
 .star-rating {
-  border:solid 1px #ccc;
-  display:flex;
+  display: flex;
   flex-direction: row-reverse;
-  font-size:1.5em;
-  justify-content:space-around;
-  padding:0 .2em;
-  text-align:center;
-  width:5em;
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+  justify-content: space-around;
+  padding: 0 0.2em;
+  text-align: center;
+  width: 5em;
 }
-
+ 
 .star-rating input {
-  display:none;
+  display: none;
 }
-
+ 
 .star-rating label {
-  color:#ccc;
-  cursor:pointer;
+  -webkit-text-fill-color: transparent; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 2.3px;
+  -webkit-text-stroke-color: #2b2a29;
+  cursor: pointer;
 }
-
+ 
 .star-rating :checked ~ label {
-  color:#f90;
+  -webkit-text-fill-color: gold;
 }
-
+ 
 .star-rating label:hover,
 .star-rating label:hover ~ label {
-  color:#fc0;
+  -webkit-text-fill-color: #fff58c;
 }
