--- a/src/main/webapp/WEB-INF/views/books/star.css
+++ b/src/main/webapp/WEB-INF/views/books/star.css
@@ -1,30 +1,41 @@
 .star-rating {
-  display: flex;
+  border:solid 1px #ccc;
+  display:flex;
   flex-direction: row-reverse;
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-  justify-content: space-around;
-  padding: 0 0.2em;
-  text-align: center;
-  width: 5em;
+  font-size:1.5em;
+  justify-content:space-around;
+  padding:0 .2em;
+  text-align:center;
+  width:5em;
 }
- 
+
 .star-rating input {
-  display: none;
+  display:none;
 }
- 
+
 .star-rating label {
-  -webkit-text-fill-color: transparent; /* Will override color (regardless of order) */
-  -webkit-text-stroke-width: 2.3px;
-  -webkit-text-stroke-color: #2b2a29;
-  cursor: pointer;
+  color:#ccc;
+  cursor:pointer;
 }
- 
+
 .star-rating :checked ~ label {
-  -webkit-text-fill-color: gold;
+  color:#f90;
 }
- 
+
 .star-rating label:hover,
 .star-rating label:hover ~ label {
-  -webkit-text-fill-color: #fff58c;
+  color:#fc0;
+}
+
+/* explanation */
+
+article {
+  background-color:#ffe;
+  box-shadow:0 0 1em 1px rgba(0,0,0,.25);
+  color:#006;
+  font-family:cursive;
+  font-style:italic;
+  margin:4em;
+  max-width:30em;
+  padding:2em;
 }
